Move GEOSERVER_OPTS to entrypoint.sh and set default values for INITIAL_MEMORY and MAXIMUM_MEMORY