@@ -18,12 +18,6 @@ ARG WAR_URL=http://downloads.sourceforge.net/project/geoserver/GeoServer/${GS_VE
 ## Would you like to install community modules
 ARG COMMUNITY_MODULES=true
 
-## Maximum Memory that Java can allocate
-ARG MAXIMUM_MEMORY="4G"
-
-## Initial Memory that Java can allocate
-ARG INITIAL_MEMORY="2G"
-
 RUN set -e \
     export DEBIAN_FRONTEND=noninteractive \
     dpkg-divert --local --rename --add /sbin/initctl \
@@ -48,15 +42,9 @@ ENV \
     ENABLE_JSONP=true \
     MAX_FILTER_RULES=20 \
     OPTIMIZE_LINE_WIDTH=false \
-    GEOSERVER_OPTS="-Djava.awt.headless=true -server -Xms${INITIAL_MEMORY} -Xmx${MAXIMUM_MEMORY} -Xrs -XX:PerfDataSamplingInterval=500 \
-       -Dorg.geotools.referencing.forceXY=true -XX:SoftRefLRUPolicyMSPerMB=36000 -XX:+UseParallelGC -XX:NewRatio=2 \
-       -XX:+CMSClassUnloadingEnabled -Dfile.encoding=UTF8 -Duser.timezone=GMT -Djavax.servlet.request.encoding=UTF-8 \
-       -Djavax.servlet.response.encoding=UTF-8 -Duser.timezone=GMT -Dorg.geotools.shapefile.datetime=true \
-       -Dorg.geotools.shapefile.datetime=true -Ds3.properties.location=/opt/geoserver/data_dir/s3.properties " \
-       #-XX:+UseConcMarkSweepGC use this rather than parallel GC?
     ## Unset Java related ENVs since they may change with Oracle JDK
     JAVA_VERSION= \
-    JAVA_DEBIAN_VERSION= 
+    JAVA_DEBIAN_VERSION=
 
 WORKDIR /scripts
 RUN mkdir -p ${GEOSERVER_DATA_DIR}
@@ -72,6 +60,10 @@ RUN /scripts/setup.sh \
     && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*  \
     && dpkg --remove --force-depends  unzip
 
-
+ENV \
+    ## Initial Memory that Java can allocate
+    INITIAL_MEMORY="2G" \
+    ## Maximum Memory that Java can allocate
+    MAXIMUM_MEMORY="4G"
 
 CMD ["/scripts/entrypoint.sh"]
